--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
 
         body {
-            background: linear-gradient(135deg, #1A0B2E 0%, #2D1B4E 50%, #1A0B2E 100%);
+            background: #000000;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
             color: #ffffff;
             min-height: 100vh;
@@ -41,23 +41,16 @@
             overflow: hidden;
         }
 
-        /* Background effects */
-        body::before {
-            content: '';
+        /* Video background */
+        .video-background {
             position: fixed;
-            inset: 0;
-            background: radial-gradient(ellipse at center, rgba(107,45,158,0.5) 0%, transparent 55%);
-            pointer-events: none;
-            z-index: 1;
-        }
-
-        body::after {
-            content: '';
-            position: fixed;
-            inset: 0;
-            background: radial-gradient(circle at 50% 15%, rgba(57,255,20,0.12) 0%, transparent 35%);
-            pointer-events: none;
-            z-index: 1;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: 0;
+            opacity: 0.8;
         }
 
         @keyframes float {
@@ -75,6 +68,10 @@
             z-index: 10;
             max-width: 600px;
             width: 100%;
+            background: rgba(0, 0, 0, 0.3);
+            padding: 20px;
+            border-radius: 12px;
+            backdrop-filter: blur(2px);
         }
 
         h1 {
@@ -176,6 +173,9 @@
     </style>
 </head>
 <body>
+    <video class="video-background" autoplay loop muted playsinline>
+        <source src="bulk.mp4" type="video/mp4">
+    </video>
     <div class="container">
         <h1>THE AMAZING BULK</h1>
         <p class="subtitle">FULL SITE BEING BULKED UP</p>
