--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
             height: auto;
             margin-bottom: 20px;
             filter: drop-shadow(0 0 10px rgba(57,255,20,0.8));
+            display: block;
+            width: 100%;
         }
 
         .subtitle {
@@ -82,6 +84,7 @@
             border-radius: 12px;
             filter: drop-shadow(0 0 25px rgba(57,255,20,0.7));
             animation: float 3s ease-in-out infinite;
+            display: block;
         }
 
         .contract-section {
@@ -154,10 +157,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="title.gif" alt="THE AMAZING BULK" class="title-image">
+        <video src="title.mp4" class="title-image" autoplay loop muted playsinline></video>
         <p class="subtitle">FULL SITE BEING BULKED UP</p>
         
-        <img src="bulk.gif" alt="The Amazing Bulk" class="banner" id="banner-image">
+        <video src="bulk.mp4" class="banner" id="banner-image" autoplay loop muted playsinline></video>
         
         <div class="contract-section">
             <div class="contract-label">CONTRACT ADDRESS</div>
